2.000_2 (yyyy-mm-dd)

    API / Behaviour Changes:
        - Use ":" to separate DICT/HASH keys from values.

    New Features:
        - None.

    Enhancements:
        - Inflate numbers as Perl IV and NV values.

    Bug Fixes:
        - None.

    Dependencies:
        - None.

    Packaging:
        - None.

2.000_1 (2019-09-02)

    API / Behaviour Changes:
        - Implements bifcode version 2, incompatible with version 1.

    New Features:
        - None.

    Enhancements:
        - None.

    Bug Fixes:
        - None.

    Dependencies:
        - None.

    Packaging:
        - None.

1.002 (2018-09-23)

    Packaging:
        - Remove ".readme_from" file from distribution

1.001 (2018-09-21)

    Packaging:
        - Generate README file using githook-perltidy's .readme_from
          support.

1.001_1 (2018-09-21)

    Enhancements:
        - Use boolean::isBoolean for tighter true/false detection
        - Work around Carp::croak's failure to handle exception
          objects

1.0 (2017-11-13)

    First stable release.

0.001_12 (2017-11-12)

    API / Behaviour Changes:
        - UTF8 and BYTES strings now encode with a trailing ","

0.001_11 (2017-11-08)

    Enhancements:
        - Document use of BIFCODE_UTF8 only for hash keys
        - Convert all errors to exception objects
        - Minor documentation and testing improvements

    Bug Fixes:
        - Return correct encode_bifcode() result in array context.

0.001_10 (2017-11-06)

    API / Behaviour Changes:
        - decode_bifcode() now does what the documentation says with
          repect to inflating BIFCODE_BYTES. They become normal scalars
          and not SCALAR references.

    Enhancements:
        - Refactor decode()

    Packaging:
        - Fix README file

0.001_9 (2017-11-05)

    Enhancements:
        - Minor documentation edits.
        - Reduced recursion during encoding.
        - Minor documentation edits.

    Dependencies: